alignment fixed

--- a/client/src/styles/UserFriends.scss
+++ b/client/src/styles/UserFriends.scss
@@ -4,4 +4,7 @@
     border-radius: 1rem;
     padding: 0.5rem 0.5rem;
     margin:  0rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
